# Mini-SLAM_student

./: .gitignore  README.md
Apps/: CMakeLists.txt  mono_euroc  mono_euroc.cc  mono_tumrgbd  mono_tumrgbd.cc
Evaluation/: evaluate_ate_scale.py
Modules/: CMakeLists.txt
Modules/Calibration/: CameraModel.h  PinHole.cc  PinHole.h
Modules/DatasetLoader/: EurocVisualLoader.cc  EurocVisualLoader.h  TUMRGBDLoader.cc  TUMRGBDLoader.h
Modules/Features/: Descriptor.h  FAST.cc  FAST.h  Feature.h  ORB.cc  ORB.h
Modules/Map/: KeyFrame.cc  KeyFrame.h  Map.cc  Map.h  MapPoint.cc  MapPoint.h
Modules/Mapping/: LocalMapping.cc  LocalMapping.h
Modules/Matching/: DescriptorMatching.cc  DescriptorMatching.h
Modules/Optimization/: g2oBundleAdjustment.cc  g2oBundleAdjustment.h  g2oTypes.cc  g2oTypes.h
Modules/System/: MiniSLAM.cc  MiniSLAM.h  Settings.cc  Settings.h
Modules/Tracking/: Frame.cc  Frame.h  MonocularMapInitializer.cc  MonocularMapInitializer.h  Tracking.cc  Tracking.h
Modules/Utils/: Geometry.cc  Geometry.h
Modules/Visualization/: FrameVisualizer.cc  FrameVisualizer.h  MapVisualizer.cc  MapVisualizer.h
